# FrameWise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
.zenokid/: settings.local.json
assets/: framewise.manifest  framewise.rc
docs/: optimizations.md  overlay.md
src/: app.rs  config.rs  hotkey.rs  lib.rs  logging.rs  main.rs
src/audit/: background_apps.rs  game_mode.rs  gpu_driver.rs  hags.rs  mod.rs  power_plan.rs
src/overlay/: mod.rs  monitor.rs  render.rs
src/platform/: admin.rs  mod.rs  os_info.rs
src/stats/: metrics.rs  mod.rs  presentmon.rs  system.rs
src/tray/: mod.rs
